testsuite/escript/classes/fail-super-ambiguous-var.err
fail-super-ambiguous-var.src:16:5: error: In call to 'super': Ambiguous parameter 'arg0'.